cmake_minimum_required (VERSION 2.6)
project (test)
set(DEBUG_FLAG -g)
include_directories("${PROJECT_SOURCE_DIR}/include")
add_executable(test-delta src/strbuf.c src/delta.c src/delta-file.c src/file.c test/test-delta.c)
add_executable(test-file src/strbuf.c src/file.c test/test-file.c)
add_executable(test-mz src/strbuf.c src/file.c test/test-mz.c src/mz.c)
target_compile_options(test-delta PUBLIC -std=gnu11 "${DEBUG_FLAG}")
target_compile_options(test-file PUBLIC -std=gnu11 "${DEBUG_FLAG}")
target_compile_options(test-mz PUBLIC -std=gnu11 "${DEBUG_FLAG}")
